...
<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="LibraryTableViewControllerCellBased" customModule="mbTunes" customModuleProvider="target">
            <connections>
                <outlet property="albumArtistColumn" destination="iR0-Qj-q6u" id="ptg-yj-5BR"/>
                <outlet property="albumByArtistColumn" destination="ois-tu-0mi" id="9lr-FY-DOm"/>
                <outlet property="albumColumn" destination="FDo-TA-EDz" id="LKi-Yn-Wg1"/>
                <outlet property="artistColumn" destination="yKq-1g-Y4O" id="RpD-Z9-nva"/>
                <outlet property="bitRateColumn" destination="LHQ-sH-EgW" id="pL3-si-X0Y"/>
...
                                            <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                        </tableHeaderCell>
                                        <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" refusesFirstResponder="YES" title="Text Cell" id="6tX-3v-3dG" customClass="MTTextFieldCell" customModule="mbTunes" customModuleProvider="target">
                                            <font key="font" metaFont="cellTitle"/>
                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                            <accessibility description="Track Name"/>
                                        </textFieldCell>
                                        <sortDescriptor key="sortDescriptorPrototype" selector="compare:" sortKey="name_order"/>
                                        <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                    </tableColumn>
                                    <tableColumn identifier="time" width="52" minWidth="10" maxWidth="3.4028234663852886e+38" id="eXL-My-fyv" userLabel="Time">
                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="right" title="Time">
...
                                            <accessibility description="Artist Name"/>
                                        </textFieldCell>
                                        <sortDescriptor key="sortDescriptorPrototype" selector="compare:" sortKey="album_artist_order"/>
                                        <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                    </tableColumn>
                                    <tableColumn identifier="artist" width="220" minWidth="40" maxWidth="1000" hidden="YES" id="yKq-1g-Y4O">
                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Artist">
                                            <font key="font" metaFont="smallSystem"/>
                                            <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                            <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                        </tableHeaderCell>
                                        <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Text Cell" id="fEH-rj-gw3" customClass="MTTextFieldCell" customModule="mbTunes" customModuleProvider="target">
                                            <font key="font" metaFont="cellTitle"/>
...
                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                        </textFieldCell>
                                        <sortDescriptor key="sortDescriptorPrototype" selector="localizedStandardCompare:" sortKey="track.sort_name"/>
                                        <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                    </tableColumn>
                                </tableColumns>
                                <accessibility description="Main Table View"/>
                                <connections>
                                    <action selector="tableViewAction:" target="-2" id="N6Z-mv-16a"/>
                                    <binding destination="6rv-dK-iy8" name="content" keyPath="arrangedObjects" id="H3j-EW-nJB"/>
                                    <binding destination="6rv-dK-iy8" name="selectionIndexes" keyPath="selectionIndexes" previousBinding="H3j-EW-nJB" id="tqC-TW-sJD"/>
                                    <binding destination="6rv-dK-iy8" name="sortDescriptors" keyPath="sortDescriptors" previousBinding="tqC-TW-sJD" id="eqZ-3L-RqL"/>
                                    <outlet property="menu" destination="GHk-a7-b5o" id="ICt-Np-eEP"/>
...
