...
                                    <outlet property="delegate" destination="-2" id="0jI-p7-ivH"/>
                                    <outlet property="menu" destination="CJP-UP-07s" id="xwb-Ua-jnj"/>
                                </connections>
                            </outlineView>
                        </subviews>
                        <nil key="backgroundColor"/>
                        <accessibility description="Source List Clip View"/>
                    </clipView>
                    <constraints>
                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="267" id="N1m-H1-Fj6"/>
                    </constraints>
                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="MiV-CB-jLE">
                        <rect key="frame" x="-100" y="-100" width="254" height="16"/>
...
